codestyle: use valueOf
- avoid deprecated constructor
- uses IntegerCache